# easterhunt

./: .container-use.yaml  .gitignore  CLAUDE.local.md.template  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  USAGE.md  activity.md  generate_audio.py  toolchain.yaml
.beads/: metadata.json
.claude/: .gitignore  README.md  settings.json
.ralph/: .gitignore  config.yaml  status.json.template  stop-hook.sh
.spec/: anforderungen_ostereier_schnitzeljagd.md  technische_und_nichtfunktionale_anforderungen_ostereier_schnitzeljagd.md
.streb/: log.md
backend/: pyproject.toml  run_frontend_tests.py
backend/app/: exceptions.py  main.py
backend/app/db/: __init__.py  engine.py  seed_content.py  session.py
backend/app/models/: __init__.py  game.py
backend/app/routers/: games.py  images.py  library.py  progress.py  stations.py
backend/app/schemas/: __init__.py  game.py
backend/app/services/: image_optimization.py  maze.py  puzzle_tile.py
backend/app/tests/: conftest.py  test_api.py  test_game_delete_cascade.py  test_games.py  test_health.py  test_image_optimization.py  test_image_processing.py  test_library.py  test_maze_api.py  test_maze_service.py  test_models.py  test_picture_riddle.py  test_progress.py  test_puzzle_e2e.py  test_puzzle_tile.py  test_puzzle_tile_dimensions.py  test_puzzle_tile_persistence.py  test_puzzle_urls.py  test_seed_content.py  test_stations.py  test_treasure.py
backend/data/content/: manifest.json
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
patterns/: gev.md  (+1 more)
(+242 files in other folders)
